--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
+    "@mui/styled-engine-sc": "^5.11.9",
+    "fortawesome": "*",
+    "oh-vue-icons": "*",
+    "styled-components": "^5.3.6",
+    "vue": "^3.2.47",
+    "vue-material-design-icons": "^5.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
