--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@mui/styled-engine-sc": "^5.11.9",
+    "chart": "^0.1.2",
+    "chart.js": "^4.2.1",
     "fortawesome": "*",
     "oh-vue-icons": "*",
+    "smart-webcomponents": "^15.0.11",
     "styled-components": "^5.3.6",
+    "typescript": "^4.9.5",
     "vue": "^3.2.47",
+    "vue-chartjs": "^5.2.0",
+    "vue-doughnut-chart": "^0.3.0",
     "vue-material-design-icons": "^5.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "sass": "^1.58.3",
     "vite": "^4.1.3"
   }
 }
